src/test/ui/regions/regions-variance-contravariant-use-covariant-in-second-position.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-variance-contravariant-use-covariant-in-second-position.rs:35:9
   |
LL | fn use_<'short,'long>(c: S<'long, 'short>,
   |         ------ ----- lifetime `'long` defined here
   |         |
   |         lifetime `'short` defined here
...
LL |     let _: S<'long, 'long> = c; //~ ERROR E0623
   |         ^ type annotation requires that `'short` must outlive `'long`

error: aborting due to previous error

